Unref interface info when fetching enums or flags

When calling g_type_info_get_interface, the resulting interface should
be dereferenced by calling g_base_info_unref.

https://bugzilla.gnome.org/show_bug.cgi?id=703960